# skeleton_stock

./: .gitignore  Makefile  PIPELINE_PATCH.txt  README.md  README_YAHOO.md  pyproject.toml
configs/: aapl_daily.yaml  aapl_yahoo.yaml  base.yaml
data/raw/: AAPL.csv
notebooks/: README.md
scripts/: backtest.py  predict.py  train.py
src/forecaster/: __init__.py
src/forecaster/config/: loader.py  types.py
src/forecaster/data/: cache.py  interfaces.py  sources.py  yahoo.py
src/forecaster/evaluation/: backtest.py  metrics.py
src/forecaster/features/: base.py  pipeline.py  transforms.py
src/forecaster/models/: base.py  factory.py  sklearn.py
src/forecaster/services/: logging.py  pipeline.py  plotting.py  registry.py
src/forecaster/utils/: dates.py  io.py
tests/unit/: test_smoke.py
